Refactor to get rid of unneeded libraries

--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     <packaging>war</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <appengine-maven-plugin-version>1.3.1</appengine-maven-plugin-version>
-        <endpoints-framework-maven-plugin>2.1.0</endpoints-framework-maven-plugin>
+        <appengine-maven-plugin-version>2.4.4</appengine-maven-plugin-version>
         <endpoints.project.id>dd4-biblical</endpoints.project.id>
     </properties>
 
@@ -24,6 +24,11 @@
             <groupId>com.digitald4</groupId>
             <artifactId>dd4-common</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.1</version>
         </dependency>
         <!-- Test Dependencies -->
         <dependency>
@@ -58,9 +63,9 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
-                <version>2.4.4</version>
+                <version>${appengine-maven-plugin-version}</version>
                 <configuration>
-                    <deploy.projectId>dd4-biblical</deploy.projectId>
+                    <deploy.projectId>${endpoints.project.id}</deploy.projectId>
                     <deploy.version>prod</deploy.version>
                 </configuration>
             </plugin>
@@ -142,5 +147,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
