Enabled ability to have scriptures in Hebrew added a few more books.

--- a/src/main/webapp/WEB-INF/index.yaml
+++ b/src/main/webapp/WEB-INF/index.yaml
@@ -7,9 +7,22 @@ indexes:
       - name: verse
   - kind: Scripture
     properties:
+      - name: version
+      - name: locale
       - name: book
       - name: chapter
       - name: verse
+  - kind: Scripture
+    properties:
+      - name: book
+      - name: chapter
+      - name: verse
+  - kind: Scripture
+    properties:
+      - name: book
+      - name: chapter
+      - name: verse
+        direction: desc
   - kind: BiblicalEvent
     properties:
       - name: year
