--- a/src/main/webapp/WEB-INF/index.yaml
+++ b/src/main/webapp/WEB-INF/index.yaml
@@ -1,35 +1,25 @@
 indexes:
   - kind: Scripture
     properties:
-      - name: version
       - name: book
       - name: chapter
       - name: verse
   - kind: Scripture
     properties:
       - name: version
-      - name: locale
       - name: book
       - name: chapter
       - name: verse
   - kind: Scripture
     properties:
+      - name: version
       - name: book
+      - name: language
       - name: chapter
       - name: verse
-  - kind: Scripture
-    properties:
-      - name: book
-      - name: chapter
-      - name: verse
-        direction: desc
   - kind: BiblicalEvent
     properties:
       - name: year
-      - name: month
-      - name: day
-  - kind: BiblicalEvent
-    properties:
       - name: month
       - name: day
   - kind: BiblicalEvent
