View of interlinear and start of ability to view DSS scrolls

--- a/src/main/webapp/WEB-INF/index.yaml
+++ b/src/main/webapp/WEB-INF/index.yaml
@@ -35,3 +35,8 @@ indexes:
       direction: desc
     - name: elapsedTime
     - name: startTime
+  - kind: Interlinear
+    properties:
+      - name: book
+      - name: chapter
+      - name: verse
