--- a/pom.xml
+++ b/pom.xml
@@ -1,158 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>DD4-Biblical</artifactId>
-    <version>1.0</version>
-    <packaging>war</packaging>
+  <groupId>org.example</groupId>
+  <artifactId>DD4-Biblical</artifactId>
+  <version>1.0</version>
+  <packaging>war</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+  <properties>
+    <appengine-maven-plugin-version>2.4.4</appengine-maven-plugin-version>
+    <endpoints.project.id>dd4-biblical</endpoints.project.id>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-        <appengine-maven-plugin-version>2.4.4</appengine-maven-plugin-version>
-        <endpoints.project.id>dd4-biblical</endpoints.project.id>
-    </properties>
+  <dependencies>
+    <!-- Compile/runtime dependencies -->
+    <dependency>
+      <groupId>com.digitald4</groupId>
+      <artifactId>dd4-common</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.1</version>
+    </dependency>
 
-    <dependencies>
-        <!-- Compile/runtime dependencies -->
-        <dependency>
-            <groupId>com.digitald4</groupId>
-            <artifactId>dd4-common</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.11.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>5.5.13.3</version>
-        </dependency>
-        <!-- Test Dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.3.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.truth</groupId>
-            <artifactId>truth</artifactId>
-            <version>1.1.3</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <!-- Test Dependencies -->
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.3.3</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
-    <build>
-        <outputDirectory>target/${project.artifactId}/WEB-INF/classes</outputDirectory>
-        <resources>
+  <build>
+    <outputDirectory>target/${project.artifactId}/WEB-INF/classes</outputDirectory>
+    <resources>
+      <resource>
+        <directory>../common/target/generated-sources/js</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>${appengine-maven-plugin-version}</version>
+        <configuration>
+          <deploy.projectId>${endpoints.project.id}</deploy.projectId>
+          <deploy.version>prod</deploy.version>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <archiveClasses>true</archiveClasses>
+          <webResources>
+            <!-- in order to interpolate version from pom into appengine-web.xml -->
             <resource>
-                <directory>../common/target/generated-sources/js</directory>
-                <filtering>true</filtering>
+              <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+              <filtering>true</filtering>
+              <targetPath>WEB-INF</targetPath>
             </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>appengine-maven-plugin</artifactId>
-                <version>${appengine-maven-plugin-version}</version>
-                <configuration>
-                    <deploy.projectId>${endpoints.project.id}</deploy.projectId>
-                    <deploy.version>prod</deploy.version>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <archiveClasses>true</archiveClasses>
-                    <webResources>
-                        <!-- in order to interpolate version from pom into appengine-web.xml -->
-                        <resource>
-                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
-                            <filtering>true</filtering>
-                            <targetPath>WEB-INF</targetPath>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>yuicompressor-maven-plugin</artifactId>
-                <version>1.3.2</version>
-                <configuration>
-                    <preProcessAggregates>true</preProcessAggregates>
-                    <aggregations>
-                        <aggregation>
-                            <insertNewLine>true</insertNewLine>
-                            <output>
-                                ${basedir}/target/${project.artifactId}-${project.version}/js/${project.artifactId}.js
-                            </output>
-                            <inputDir>${basedir}/src/main/js</inputDir>
-                            <includes>
-                                <include>**/*.js</include>
-                            </includes>
-                        </aggregation>
-                    </aggregations>
-                    <excludes>
-                        <exclude>**/*-min.js</exclude>
-                        <exclude>**/*.min.js</exclude>
-                        <exclude>**/*-min.css</exclude>
-                        <exclude>**/*.min.css</exclude>
-                    </excludes>
-                    <jswarn>false</jswarn>
-                    <nosuffix>false</nosuffix>
-                    <sourceDirectory>${basedir}/target/generated-sources/js</sourceDirectory>
-                    <outputDirectory>${basedir}/target/${project.artifactId}-${project.version}/js</outputDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>compress_js_css</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>compress</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <tasks>
-                                <copy todir="${basedir}/target/${project.artifactId}-${project.version}/js/html"
-                                      flatten="true">
-                                    <fileset dir="../common/src/main/js/html">
-                                        <include name="*.html"/>
-                                    </fileset>
-                                    <fileset dir="src/main/js/html">
-                                        <include name="*.html"/>
-                                    </fileset>
-                                </copy>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+          </webResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>yuicompressor-maven-plugin</artifactId>
+        <configuration>
+          <preProcessAggregates>true</preProcessAggregates>
+          <aggregations>
+            <aggregation>
+              <insertNewLine>true</insertNewLine>
+              <output>
+                ${basedir}/target/${project.artifactId}-${project.version}/js/${project.artifactId}.js
+              </output>
+              <inputDir>${basedir}/src/main/js</inputDir>
+              <includes>
+                <include>**/*.js</include>
+              </includes>
+            </aggregation>
+          </aggregations>
+          <excludes>
+            <exclude>**/*-min.js</exclude>
+            <exclude>**/*.min.js</exclude>
+            <exclude>**/*-min.css</exclude>
+            <exclude>**/*.min.css</exclude>
+          </excludes>
+          <jswarn>false</jswarn>
+          <nosuffix>false</nosuffix>
+          <sourceDirectory>${basedir}/target/generated-sources/js</sourceDirectory>
+          <outputDirectory>${basedir}/target/${project.artifactId}-${project.version}/js
+          </outputDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <id>compress_js_css</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>compress</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>process-resources</phase>
+            <configuration>
+              <target>
+                <copy todir="${basedir}/target/${project.artifactId}-${project.version}/js/html">
+                  <fileset dir="../common/src/main/js/html">
+                    <include name="*.html"/>
+                  </fileset>
+                  <fileset dir="src/main/js/html">
+                    <include name="*.html"/>
+                  </fileset>
+                </copy>
+                <copy todir="${basedir}/target/${project.artifactId}-${project.version}/service_hello">
+                  <fileset dir="src/main/python/services">
+                    <include name="**/*"/>
+                  </fileset>
+                </copy>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
