--- a/src/main/python/services/hello/app.yaml
+++ b/src/main/python/services/hello/app.yaml
@@ -1,10 +1,10 @@
-# Copyright 2018 Google Inc. All Rights Reserved.
+# Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#      http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,13 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import hello
-
-
-def test_index():
-  hello.app.testing = True
-  client = hello.app.test_client()
-
-  r = client.get("/")
-  assert r.status_code == 200
-  assert "Hello from Python" in r.data.decode("utf-8")
+runtime: python311
+service: hello # Will be served at http://hello.our-project-id.appspot.com/
