Start of DSS OCR work.

--- a/src/main/python/ml/requirements.txt
+++ b/src/main/python/ml/requirements.txt
@@ -1,8 +1,11 @@
 chromadb
 gradio
+idx2numpy
 jq
+keras==3.4.1
 langchain_openai
 langchain_community
+pytesseract
 sentence_transformers
 tensorflow
 tensorflow_text
