--- a/src/main/python/services/dss_images/training/fonts.conf
+++ b/src/main/python/services/dss_images/training/fonts.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-<dir>fonts/</dir>
+<dir></dir>
 <cachedir></cachedir>
 <config></config>
 </fontconfig>
