--- a/src/main/python/services/mcp/mcp_server/pyproject.toml
+++ b/src/main/python/services/mcp/mcp_server/pyproject.toml
@@ -6,5 +6,5 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastmcp>=2.5.1",
-    "sentence_transformers>=3.6.0"
+    # "sentence_transformers>=3.6.0",
 ]
